<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_header"
        android:gravity="center_vertical"
        android:padding="10px">

        <TextView
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="20px"
            android:textStyle="bold"
            android:gravity="right" />

        <TextView
            android:id="@+id/live_badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_live_badge"
            android:text="@string/live"
            android:textColor="#D9A441"
            android:textSize="12px"
            android:textStyle="bold"
            android:layout_marginLeft="8px" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="@drawable/bg_gold_divider" />

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#1A1A1A"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/tab_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1">

        <ListView
            android:id="@+id/news_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="#D9D9D9"
            android:dividerHeight="1px"
            android:cacheColorHint="#00000000" />

        <LinearLayout
            android:id="@+id/loading_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="#FFFFFF">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8px"
                android:text="@string/loading"
                android:textColor="#666666" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/error_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="#FFFFFF"
            android:visibility="gone"
            android:padding="24px">

            <TextView
                android:id="@+id/error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_network"
                android:textColor="#333333"
                android:gravity="center"
                android:layout_marginBottom="12px" />

            <Button
                android:id="@+id/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry" />
        </LinearLayout>
    </FrameLayout>

    <include layout="@layout/bottom_nav" />

</LinearLayout>
